fix contrast button

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     --text-primary: #333;
     --text-secondary: #555555;
     --text-third : #757575;
-    --accent: #ff5757;
+    --accent: #e63946;
     --accent-hover: #ff3838;
     --skill-bg: #f0e6d2;
     --shadow: rgba(0,0,0,0.1);
